
plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

version = '0.0.0'
sourceCompatibility = 14
targetCompatibility = 14



test {
    useJUnitPlatform()
    minHeapSize = "128m"
    maxHeapSize = "1024m"

    // Headless test execution (true by default)
    if (project.hasProperty("headless") ? project.headless : true) {
        jvmArgs "-Dtestfx.robot=glass"
        jvmArgs "-Dtestfx.headless=true"
        jvmArgs "-Dprism.order=sw"
        jvmArgs "-Dprism.text=t2k"
    }

    beforeTest {
        descriptor -> logger.lifecycle("Running test: " + descriptor)
    }
}

javafx {
    version = '16'
    modules = ['javafx.controls', 'javafx.fxml']
}

repositories {
    mavenCentral()
}



dependencies {


    implementation 'org.kordamp.ikonli:ikonli-javafx:11.1.0'
    implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:11.1.0'
    implementation 'org.kordamp.ikonli:ikonli-material-pack:11.1.0'
    implementation 'org.codehaus.griffon:griffon-javafx:2.15.1'
    implementation 'org.controlsfx:controlsfx:11.0.0-RC2'
    implementation 'junit:junit:4.13.1'
    implementation 'junit:junit:4.13.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
    implementation group: 'org.json', name: 'json', version: '20180813'

    implementation 'com.google.code.gson:gson:2.8.8'
    testImplementation "org.mockito:mockito-core:3.+"
    testImplementation "org.testfx:testfx-junit5:4.0.15-alpha"
    testRuntimeOnly "org.testfx:openjfx-monocle:jdk-11+26"
}

task(runCLI, dependsOn: 'classes', type: JavaExec) {
    main = 'app.foodapp.FoodAppCLI'
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
    args "list"
    args "today"
}

application {
    mainClassName = 'app.foodapp.view.FoodApp'
    applicationDefaultJvmArgs = [
            '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED'
    ]
}

javadoc {
    options.with {
        links 'https://docs.oracle.com/en/java/javase/11/docs/api/'
    }
}

